tests/fails/f1.t

terra foo()
    var a : 1 + "a"
end
foo()